# Contextual-Memory-Compilation-Architecture

./: Cargo.toml  README.md
demo/: ai_agent_demo.rs  demo.rs  demo_memory.cmca  memory.cmca
src/: ai_agent.rs  compiler.rs  context.rs  distillation.rs  execution.rs  fossilization.rs  intent.rs  lib.rs  linter.rs  llm_integration.rs  main.rs  memory.rs  query_expansion.rs  response_builder.rs  storage.rs  types.rs
src/ingestion/: config.rs  extractors.rs  mod.rs  patterns.rs  stats.rs  utils.rs
tests/: common.rs  compilation_pipeline.rs  context_compilation.rs  execution.rs  fossilization.rs  full_pipeline_test.rs  ingestion_patterns.rs  integration_test.rs  learning_pathways.rs  learning_scenarios.rs  linter.rs  memory_decay.rs  memory_storage.rs  pattern_formation.rs  performance.rs  success_metrics.rs
